# apmcm-submit

./: .gitignore  pyproject.toml
2025/paper/: APMCM_2025C_core_paper_cn.md  APMCM_2025C_full_paper.tex  APMCM_2025C_method_data_code_cn.md  APMCM_2025C_paper_cn.md
2025/results/: q2_scenario_industry.csv  q3_output_response.json  q3_policy_scenarios.csv  q3_security_metrics.csv  q4_revenue_scenarios.csv
2025/results/q1/: SUMMARY.md  q1_elasticities.json  q1_forecast_comparison.json  q1_forecast_comparison.md  q1_lstm_history.csv  q1_lstm_predictions.csv  q1_lstm_predictions.json  q1_lstm_residuals.csv  q1_lstm_run.json  q1_lstm_summary.md  q1_scenario_exports.csv
2025/results/q2/: SUMMARY.md  q2_forecast_comparison.json  q2_forecast_comparison.md
2025/results/q3/: SUMMARY.md  q3_forecast_comparison.json  q3_forecast_comparison.md
2025/results/q4/: SUMMARY.md  q4_model_comparison.json  q4_model_comparison.md
2025/results/q5/: SUMMARY.md  q5_model_comparison_brief.json  q5_model_comparison_brief.md
2025/src/: main.py
2025/src/models/: __init__.py  q1_soybeans.py  q2_autos.py  q2_marl_drl.py  q2_marl_env.py  q3_gnn.py  q3_gnn_tri.py  q3_semiconductors.py  q4_tariff_revenue.py  q5_macro_finance.py  q5_transformer_torch.py  run_models.ps1
2025/src/utils/: README_DATA_TOOLS.md  __init__.py  china_soybeans_manual.py  config.py  data_consolidate.py  data_exporter.py  data_fetch.py  data_loader.py  external_data.py  generate_q6_dataset.py  generate_q6_dataset_fixed.py  (+2 more)
project_document/: APMCM_2025C_project_overview_cn.md  APMCM_2025C_strict_review_cn.md
(+65 files in other folders)
